Can no longer run OctaneV2 in browser, crashes in speculationFromCell https://bugs.webkit.org/show_bug.cgi?id=128266

Reviewed by Filip Pizlo.

Move the OSR exit write barriers into OSRExitCompilerCommon. Also reorganize some
of the code to be in more appropriate places.

* dfg/DFGOSRExitCompiler32_64.cpp:
(JSC::DFG::OSRExitCompiler::compileExit):
* dfg/DFGOSRExitCompiler64.cpp:
(JSC::DFG::OSRExitCompiler::compileExit):
* dfg/DFGOSRExitCompilerCommon.cpp:
(JSC::DFG::osrWriteBarrier):
(JSC::DFG::adjustAndJumpToTarget):
* dfg/DFGSpeculativeJIT.cpp:
* dfg/DFGSpeculativeJIT.h:
* jit/AssemblyHelpers.h:
(JSC::AssemblyHelpers::genericWriteBarrier):


Canonical link: https://commits.webkit.org/146269@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@163471 268f45cc-cd09-0410-ab3c-d52691b4dbfc